adding get all book and search
